--- a/lightbot_web/package.json
+++ b/lightbot_web/package.json
@@ -19,10 +19,12 @@
 		"react-dom": "16.13.0",
 		"react-google-maps": "9.4.5",
 		"react-iframe": "^1.8.0",
+		"react-modal": "^3.11.2",
 		"react-notification-alert": "0.0.12",
 		"react-router-dom": "5.1.2",
 		"react-scripts": "3.4.0",
 		"reactstrap": "8.4.1",
+		"sweetalert2": "^10.0.2",
 		"universal-cookie": "^4.0.3"
 	},
 	"scripts": {
